# hw04

./: .gitignore  ANSWER.md  CMakeLists.txt  README.md  Result.md  answer.md  bench.sh  git-pull-request.md  initial.cpp  initial_main.cpp  main.S  main.cpp  main.s  main1.cpp  mind.md  opt1_math_main.cpp  opt2_soa_main.cpp  opt_main  opt_main.cpp  opt_main_array.cpp  opt_main_gdt.cpp  opt_main_seperate.cpp  opt_main_vec.cpp  rbq.bat  run.sh  score.txt  v.sh  work.cpp  work2.cpp  work_eigen.cpp
